# show-and-tell

./: README.md
Face2Face/Capturing Photos.swiftpm/: README.md
Face2Face/Face2Face/: Face2FaceApp.swift  NewFace2Face.swift  StartNewFace2Face.swift  StartNewFace2FaceView.swift
Face2Face/Face2Face.xcodeproj/: project.pbxproj
Face2Face/Face2Face.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Face2Face/Face2Face.xcodeproj/project.xcworkspace/xcuserdata/amos.gyamfigetstream.io.xcuserdatad/: UserInterfaceState.xcuserstate
Face2Face/Face2Face.xcodeproj/project.xcworkspace/xcuserdata/raviriley.xcuserdatad/: UserInterfaceState.xcuserstate
Face2Face/Face2Face.xcodeproj/xcuserdata/amos.gyamfigetstream.io.xcuserdatad/xcschemes/: xcschememanagement.plist
Face2Face/Face2Face/LiveCameraView/: ViewController.swift
Face2FaceASL/Face2FaceASL/: ContentView.swift  Face2FaceASLApp.swift
Face2FaceASL/Face2FaceASL.xcodeproj/: project.pbxproj
Face2FaceASL/Face2FaceASL.xcodeproj/project.xcworkspace/xcuserdata/raviriley.xcuserdatad/: UserInterfaceState.xcuserstate
Face2FaceASL/Face2FaceASL.xcodeproj/xcuserdata/raviriley.xcuserdatad/xcschemes/: xcschememanagement.plist
Face2FaceASL/Face2FaceASL/CustomStreamUI/: CustomCallControlsView.swift  CustomViewFactory.swift
ShowAndTell/ShowAndTell/: ASLViewModel.swift  AppViewModel.swift  CameraFeedManager.swift  ContentView.swift  CustomCallControlsView.swift  CustomViewFactory.swift  EmotionViewModel.swift  MainOverlayView.swift  ShowAndTellApp.swift
ShowAndTell/ShowAndTell.xcodeproj/: project.pbxproj
ShowAndTell/ShowAndTell.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ShowAndTell/ShowAndTell.xcodeproj/project.xcworkspace/xcuserdata/raviriley.xcuserdatad/: UserInterfaceState.xcuserstate
ShowAndTell/ShowAndTell.xcodeproj/xcuserdata/raviriley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ShowAndTell/ShowAndTell.xcodeproj/xcuserdata/raviriley.xcuserdatad/xcschemes/: xcschememanagement.plist
ShowAndTell/ShowAndTell/Snapshots/: StreamSnapshotTrigger.swift
backend/: pyproject.toml  requirements.txt
backend/backend/: app.py  full.ipynb  image_receive.py  spotter_app_reference.py
backend/scripts/: scripts.py
(+2 files in other folders)
